--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,24 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <title>TRIBUTE PAGE</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+    <h1 id="main-tribute"> Dr cherefant
+    </h1>
+    <div id="First-thing">
+        <h2>Who was Dr Cherefant</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor dolorum distinctio ullam, eum delectus quia
+            cum, veritatis blanditiis ex commodi voluptatem magni est similique, aliquid porro optio in deserunt
+            mollitia?
+        </p>
+    </div>
+
+</body>
+
+</html>
