--- a/Index.html
+++ b/Index.html
@@ -9,17 +9,15 @@
 
 <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-    <h1 id="main-tribute"> Dr cherefant
-    </h1>
-    <div id="First-thing">
+    <header id="main">
+    <div id="Titile">
         <h2>Who was Dr Cherefant</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor dolorum distinctio ullam, eum delectus quia
             cum, veritatis blanditiis ex commodi voluptatem magni est similique, aliquid porro optio in deserunt
             mollitia?
         </p>
     </div>
-    
-    <h2> Keep studyng stop urfing in lol </h2>
+</header>
 
 </body>
 
